--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.21.0",
     "babel-plugin-root-import": "^6.6.0",
     "customize-cra": "^1.0.0",
+    "history": "^5.0.0",
+    "polished": "^4.0.5",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-switch": "^5.0.1",
+    "react-toastify": "^6.1.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -45,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4"
   }
 }
