--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "CI= react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
